--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -79,5 +79,57 @@ right: 0;
 }
 
 #home {
-  top: 0;
+  height: 100vh;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background: url("/images/introbg.jpg") center center no-repeat;
+  background-color: black;
+  background-size: cover;
 }
+
+#bg {
+  height: 100vh;
+  background-color: black;
+  background: url("/images/zubra.jpg") center center no-repeat;
+  background-size: cover;
+  z-index: -1;
+}
+
+
+.hover-underline-menu {
+  width: 100%;
+  z-index: 2;
+  
+}
+
+.hover-underline-menu .menu {
+  background-color: #2C3840;
+}
+
+.hover-underline-menu .menu a {
+  color: #fefefe;
+  padding: 1.2rem 1.5rem;
+}
+
+.hover-underline-menu .menu .underline-from-center {
+  position: relative;
+}
+
+.hover-underline-menu .menu .underline-from-center::after {
+  content: "";
+  position: absolute;
+  top: calc(100% - 0.125rem);
+  border-bottom: 0.125rem solid #fefefe;
+  left: 50%;
+  right: 50%;
+  transition: all 0.5s ease;
+}
+
+.hover-underline-menu .menu .underline-from-center:hover::after {
+  left: 0;
+  right: 0;
+  transition: all 0.5s ease;
+}
+
+
