--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
+<div class="bg" id="bg">
 <div class="hero-full-screen">
 
   {{!-- <div class="top-content-section" id="BlankSpace">
@@ -22,6 +23,15 @@
 
 </div>
 
+
+  <nav class="hover-underline-menu" id="nav" data-menu-underline-from-center>
+  <ul class="menu align-center">
+    <li><a href="#">One</a></li>
+    <li><a href="#">Two</a></li>
+    <li><a href="#">Three</a></li>
+    <li><a href="#">Four</a></li>
+  </ul>
+</nav>
 
 <div id="home">
   <div class="container">
@@ -59,3 +69,5 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
 <script src="/js/frontend.js"></script>
+
+</div>
