--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -1,37 +1,37 @@
 <div class="container">
     <h1>Owner Data {{msg}}</h1>
-    <form action="">
+    <form action="" class="validateForm">
         <label for="first"> First Name</label><br>
-        <input type="text" id="first" class="validate"><br>
+        <input type="text" id="first" name="first"><br>
 
         <label for="last"> Last Name</label><br>
-        <input type="text" id="last" class="validate"><br>
+        <input type="text" id="last" name="last"><br>
 
         <label for="phone"> Phone Number</label><br>
-        <input type="text" id="phone" class="validate"><br>
+        <input type="text" id="phone" name="phone"><br>
 
         <label for="email"> Email</label><br>
-        <input type="text" id="email" class="validate"><br>
+        <input type="text" id="email" name="email"><br>
 
         <label for="address"> Address</label><br>
 
         <label for="street">Street</label><br>
-        <input type="text" id="street" class="validate"><br>
+        <input type="text" id="street" name="street"><br>
 
         <label for="city">City</label><br>
-        <input type="text" id="city" class="validate"><br>
+        <input type="text" id="city" name="city"><br>
 
         <label for="state">State</label><br>
-        <input type="text" id="state" class="validate"><br>
+        <input type="text" id="state" name="state"><br>
 
         <label for="zip">Zip</label><br>
-        <input type="text" id="zip" class="validate"><br>
+        <input type="text" id="zip" name="zip"><br>
 
         <label for="horse">Number Horses</label><br>
-        <input type="text" id="horse" class="validate"><br>
+        <input type="text" id="horse" name=""><br>
 
         <label for="tp">Trailer Parking</label><br>
-        <input type="text" id="tp" class="validate"><br>
+        <input type="text" id="tp" name=""><br>
 
         <button id="submit">Submit</button>
     </form>
