--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="/styles/foundation.css">
   <link rel="stylesheet" href="/styles/animate.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <title>Home Page</title>
+  <title>Hidden Timber Farm</title>
+
+<!-- Favicon -->
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
