--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,8 +1,27 @@
-<div class="container">
-  <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-    </h1>
-    <a href="/">← Back To Home</a>
+<div class="zebraFour" id="zebraFour">
+
+<div class="card-user-profile">
+  <div class="card-user-profile-content card-section">
+    <div class="card-user-profile-avatar">
+    </div>
+    <p class="card-user-profile-name">404: You've reached the wrong type of horse.</p>
+    <p class="card-user-profile-info"></p>
+  </div>
+
+  <div class="card-user-profile-actions">
   </div>
 </div>
+<div class="zebraCage" id="zebraCage">
+<img id="zebra" src="/images/hiclipart.com.png" alt="Italian Trulli">
+</div>
+
+<div class="four-slider" id="scrollButton" data-magellan data-threshold="0">
+      <a href="/"><svg xmlns="http://www.w3.org/2000/svg" id="sliderButton" width="24" height="24"
+          viewBox="0 0 24 24">
+          <path
+            d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z" />
+        </svg></a>
+    </div>
+
+</div>
+
