--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -30,6 +30,8 @@
 
         <label for="tp">Trailer Parking</label><br>
         <input type="text" id="tp" name="tp"><br>
+        {{!-- radio button yes or no --}}
+
 
         <button id="submit">Submit</button>
     </form>
