starting the styling and added a lot of images

--- a/public/styles/foundation.css
+++ b/public/styles/foundation.css
@@ -177,7 +177,7 @@ body {
   margin: 0;
   padding: 0;
   background: #fefefe;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Merriweather";
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
@@ -2190,7 +2190,7 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Oswald";
   font-style: normal;
   font-weight: normal;
   color: inherit;
