creating a landing page for owners after login with a few events

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,12 @@
   <link rel="stylesheet" href="/styles/foundation.css">
   <link rel="stylesheet" href="/styles/animate.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
+  {{!-- CSS for flipcards on the Horse Owner Login Landing page --}}
+  <link rel="stylesheet" href="/styles/flipcard.css">
+
   <title>Hidden Timber Farm</title>
 
-<!-- Favicon -->
+  <!-- Favicon -->
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
 </head>
